[package]
name = "panel-activity_log-cleaner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.34+deprecated"
sqlx = { version = "0.7.4", features = ["mysql", "runtime-tokio-native-tls", "chrono"] }
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["multipart", "json"] }

